Feature/adding-image-generation-and-upload-support (#16)
* feat: Implement image upload functionality and enhance recipe generation

* moving to inmemory mongo for tests

* Enhance AI image search functionality with keyword extraction and fallback

---------
